# peak-detection-v0.2

./: .gitignore  README.md  compare_peak_algorithms.py  component_map.json  pyproject.toml  reliable_peak_detector.py  requirements-peak-detector.txt  requirements.txt  run_detector.py  run_open_algorithms.py  峰检测算法说明_v1.md  开源算法检索与试跑报告_v1.md  需求梳理_v1.md
algorithm_results/: file_summary.csv  manifest.json  peak_candidates.csv  screened_peak_candidates.csv
algorithm_results/hplc_py/: hplc_summary.csv  type1_2-819机型-基准2#标气_3897da10_hplc_peaks.csv  type2_A1-C2H2鼓包_22d6f1a4_hplc_peaks.csv  type2_A10-CH4赶在鼓包上_4aff2087_hplc_peaks.csv  type3_B10-1噪音、波动比较多，识别成C2H2_ab5fa41f_hplc_peaks.csv  type4_F1-H2负峰-处理_0e0424a5_hplc_peaks.csv  type5_H3-C2H2位置受干扰-峰比较对称_332d5fa2_hplc_peaks.csv
configs/: detector_config.json
docs/: 峰检测算法说明_v1.md  技术总结_v0.5.2.docx  技术总结_v0.5.2.md  算法实现与技术溯源_v0.5.2.docx  算法实现与技术溯源_v0.5.2.md  色谱峰检测成果展示_v0.5.2.pptx  色谱峰检测成果展示_v0.5.2_判别规则完整版.pptx  色谱峰检测成果展示_v0.5.2_完整图对比版.pptx  色谱峰检测成果展示_v0.5.2_对比分析版.pptx
experiments/: compare_peak_algorithms.py  run_open_algorithms.py
reliable_detector_results/: all_detected_features.csv  confirmed_peaks.csv  detected_peaks_for_validation.csv  file_quality_summary.csv  interference_candidates.csv  learned_peak_template.json  manifest.json  priority_validation_set.csv  review_required.csv  validation_labels_template.csv
scripts/: generate_deliverables.py  generate_technical_document.py
src/chrompeak/: __init__.py  __main__.py  core.py  detector.py
tests/: test_detector.py
